Gnome Software does not refresh after installation from RPM.
When installing an application from RPMs, Software reports that it has been installed, but when I look into the Installed applications, the application is listed as In Progress. This lasts until the background process is killed with gnome-software --quit
. Then, when restarted, the application is correctly placed in the Installed applications.
This only happens when the installation source is RPM. When installing from Flatpaks, the lists are updated correctly immediately.
Reproducible: Always
Used version: gnome-software-41.0-5.fc35.x86_64